tests/compile-fail/tracked_struct_field_not_partial_eq.rs
#[salsa::tracked]
struct MyInput<'db> {
    field: NotPartialEq,
}

#[derive(Clone, Debug, Hash, salsa::SalsaValue)]
struct NotPartialEq;

fn main() {}
